# lendos

./:  pre-commit-config.yaml  .gitignore  alembic.ini  docker-compose.yaml  example.env  pyproject.toml
.github/workflows/: python-app.yml
backend/src/: config.py  fastapi_app.py  faststream_app.py  ioc.py  main.py
backend/src/application/: dto.py  exceptions.py  interactors.py  interfaces.py
backend/src/controllers/: routes.py
backend/src/domain/: entities.py
backend/src/infrastructure/: _types.py  middlewares.py  models.py
backend/src/infrastructure/factories/: postgres.py  rabbit.py  redis.py
backend/src/infrastructure/migrations/: env.py  script.py.mako
backend/src/infrastructure/migrations/scripts/: _types.py  build_schema_diagram.py  create_migrations.py  doc.py  format_migration.py  generate_docs.py  inspect_models.py  render_migration_graph.py  verify_migrations.py
backend/src/infrastructure/repositories/: cookies.py  exc.py  security.py  sessions.py  user.py
